# web_quic_star

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  env_prod.env.example  package.json  run_dev.sh  run_prod.sh  simple_coding_standards.md
.run/: Clippy.run.xml  Run.run.xml  Test.run.xml
axum-login/: Cargo.toml
crates/aide-macros/src/: lib.rs
crates/aide/src/: gen.rs  lib.rs  transform.rs
crates/aide/src/axum/: inputs.rs  mod.rs  outputs.rs
crates/axum-login/: Cargo.toml
crates/axum-login/src/: service.rs  session.rs
crates/derive_builder/src/: lib.rs
crates/derive_builder_core/src/: lib.rs
crates/derive_builder_core/src/macro_options/: darling_opts.rs
crates/derive_builder_macro/src/: lib.rs
derive_macro/derive_builder_core/src/: lib.rs
migrations/2024-10-09-073215_create_auth/: up.sql
migrations/2025-01-03-093059_create_table/: down.sql  up.sql
src/: api-doc.md  constant.rs  lib.rs  schema.rs  schema_view.rs
src/api/: auth.rs  group.rs  group_permission.rs  mod.rs  permission.rs  upload.rs  user.rs
src/api_auth/: login_impl.rs  mod.rs  router.rs
src/api_doc/: axum_json_for_schema.rs  docs.rs  errors.rs  extractors.rs  mod.rs
src/contract/: ierc_20.rs  iweth.rs  mod.rs  uni_pair_v2.rs  uni_pair_v3.rs
src/contracts/: erc20.rs  mod.rs  uni_factory.rs  uni_pair.rs  usdt.rs
src/controller/: group.rs  group_permission.rs  mod.rs  permission.rs  user.rs
src/db_models/: dex_gram.rs  dex_gram_new.rs  group.rs  group_permission.rs  mod.rs  pagination.rs  permission.rs  user.rs  user_with_group_views.rs
src/domain/: db_enum.rs  eth_addr.rs  mod.rs  solana_addr.rs
src/framework/: api.rs  auth.rs  db.rs  mod.rs
src/framework/api_doc/: axum_json_for_schema.rs  docs.rs  errors.rs  extractors.rs  mod.rs
src/router/: mod.rs
src/scheduled_task/: mod.rs
src/service/: dex_gram.rs  mod.rs
src/subscribe/: mod.rs  transaction.rs
src/utils/: file.rs  mod.rs
src/utils/api_wrapper/: uni_graph.rs
src/utils/contracts/: erc20.rs  mod.rs  uni_factory.rs  uni_pair.rs  uni_router2.rs  usdt.rs
src/utils/subscribe/: mod.rs
