[package]
name = "web_quic_star"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev", "eth_mode", "solana_mode","postgres"]
eth_mode = ["dep:alloy"]
solana_mode = ["dep:solana-sdk", "dep:anchor-client"]
dev = []
postgres = ["diesel/postgres", "diesel-dynamic-schema/postgres", "diesel-derive-enum/postgres"]

[dependencies]
axum = { version = "^0.7.0", features = ["macros"] }
axum-extra = "0.9.4"
axum-macros = "0.4.2"
axum-login = { path = "crates/axum-login" }
aide = { version = "0.13.4", features = ["redoc", "scalar", "axum", "axum-extra", "macros", "axum-headers"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
schemars = { version = "0.8.21", features = ["uuid1", "chrono", "bigdecimal04"] }
password-auth = "1.0.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"


diesel = { version = "2.2.4", features = ["extras", ] }
diesel-dynamic-schema = { version = "0.2.2", features = [] }
r2d2 = "0.8.10"
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = [] }



dotenvy = "0.15.7"
alloy = { version = "0.5.4", features = ["full"], optional = true }
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3.31"
tokio-cron-scheduler = { version = "0.13.0", features = [] }
derive_builder = { path = "crates/derive_builder" }
async-trait = "0.1.83"
http = "1.1.0"
itertools = "0.13.0"
serde_path_to_error = "0.1.16"
jsonschema = { version = "0.17.0", default-features = false }

solana-sdk = { version = "2.1.0", optional = true }
anchor-client = { path = "crates/anchor/client", optional = true }

[build-dependencies]

