[package]
name = "web_quick"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev", "solana_mode", "postgres"]
eth_mode = ["dep:alloy"]
solana_mode = ["dep:anchor-client"]
dev = []
postgres = ["diesel/postgres", "diesel-dynamic-schema/postgres"]
#mysql = ["diesel/mysql", "diesel-dynamic-schema/mysql", "diesel-derive-enum/mysql","dep:r2d2_mysql"]

[dependencies]
axum = { version = "^0.7.0", features = ["macros"] }
axum-macros = "0.4.2"
axum-login = { path = "crates/axum-login" }
aide = { version = "0.13.4", features = ["redoc", "scalar", "axum", "axum-extra", "macros", "axum-headers","axum-multipart"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18" ,features = ["env-filter"]}
tracing = "0.1.40"
schemars = { version = "0.8.21", features = ["uuid1", "chrono", "bigdecimal04"] }
password-auth = "1.0.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.214", features = ["derive", "rc"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "trace","fs"] }

diesel = { version = "2.2.4", features = ["extras", ] }
diesel-dynamic-schema = { version = "0.2.2", features = [] }
r2d2 = "0.8.10"
#r2d2_postgres = { version = "0.18.1" ,optional = true}
#r2d2_mysql = { version = "25.0.0",optional = true}
bigdecimal = { version = "0.4.6", features = ["serde-json"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel-enum = { version = "0.2.1", features = [] }



dotenvy = "0.15.7"
alloy = { version = "0.6.2", features = ["full"], optional = true }
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3.31"
tokio-cron-scheduler = { version = "0.13.0", features = [] }
derive_builder = { path = "crates/derive_builder" }
async-trait = "0.1.83"
http = "1.1.0"
itertools = "0.13.0"
serde_path_to_error = "0.1.16"
jsonschema = { version = "0.26.1", default-features = false }
derive_more = { version = "1.0.0", features = ["default", "error", "display"] }

anchor-client = { path = "crates/anchor/client", optional = true }
tokio-util = "0.7.12"
sha2 = "0.10.8"

[build-dependencies]

